refactor(app): 优化轮班模式编辑界面
- 更新字符串资源，使用本地化文本
-调整轮班周期天数上限为360天
- 优化 Activity 标题设置逻辑
- 改进空值处理，提高代码健壮性
- 修复日夜间主题背景颜色

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="action_calendar">日历</string>
     <string name="action_settings">设置</string>
     <string name="edit_shift">编辑班次</string>
+    <string name="rotation_pattern_name">轮班模式名称</string>
+    <string name="rotation_group_count">轮班组数</string>
+    <string name="rotation_cycle_days">周期天数</string>
+    <string name="rotation_duration_days">持续天数</string>
+    <string name="save">保存</string>
+    <string name="edit_rotation_pattern">编辑轮班模式</string>
+    <string name="new_rotation_pattern">新建轮班模式</string>
+    <string name="input_pattern_name">请输入轮班模式名称</string>
+    <string name="save_success">保存成功</string>
 </resources>
